--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -1,3 +1,4 @@
+/* Media queries */
 @media screen and (max-width: 768px) {
     .work-section h1 {
         padding: 0 0 0 0.5em;
@@ -5,10 +6,12 @@
     }
 }
 
+/* Work Section Styles */
 .work-section {
     background: #fff;
     padding-top: 90px;
     padding-bottom: 0px;
+    border-bottom: 1px solid #E8E8E8;
 }
 
 .work-section h1 {
@@ -29,6 +32,7 @@
     font-weight: 800;
 }
 
+/* Information underneath work section */
 .info {
     font-family: 'Libre Baskerville', serif;
     font-size: 15px;
@@ -42,6 +46,7 @@
     margin-left: 5px;
 }
 
+/* Bullet point styles */
 .bullet-point {
     font-size: 140%;
     padding-right: 5px;
@@ -58,8 +63,3 @@
     margin-bottom: 40px;
 }
 
-.work-section .row {
-    border-bottom: 1px solid #E8E8E8;
-    margin-bottom: 48px;
-    padding-bottom: 24px;
-}
